<resources>
    <string name="app_name">My Calculator</string>
    <string name="num1">Number 01</string>
    <string name="num1_hint">Enter number 01</string>
    <string name="num2">Number 02</string>
    <string name="num2_hint">Enter number 02</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multi">*</string>
    <string name="div">/</string>
    <string name="btnBack">Back</string>

</resources>