<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/back4">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="181dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/num1"
        android:textColor="@color/background"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/etNum01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNum01"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/num1_hint"
        android:inputType="number"
        android:textColor="@color/background"
        android:textColorHint="@color/background"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="167dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button"
        android:text="@string/num2"
        android:textColor="@color/background"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/etNum2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNum01" />

    <EditText
        android:id="@+id/etNum2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/num2_hint"
        android:inputType="number"
        android:textColor="@color/background"
        android:textColorHint="@color/background"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/btnPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="161dp"
        android:layout_height="161dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button"
        android:onClick="onClickButton"
        android:text="@string/plus"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnMulti"
        app:layout_constraintEnd_toStartOf="@+id/btnMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNum2" />

    <Button
        android:id="@+id/btnMulti"
        android:layout_width="158dp"
        android:layout_height="151dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        android:onClick="onClickButton"
        android:text="@string/multi"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDiv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPlus" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="153dp"
        android:layout_height="147dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_button"
        android:onClick="onClickButton"
        android:text="@string/div"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnMulti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnMulti" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="154dp"
        android:layout_height="156dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/custom_button"
        android:onClick="onClickButton"
        android:text="@string/minus"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPlus" />

    <Button
        android:id="@+id/button2"
        android:layout_width="83dp"
        android:layout_height="45dp"
        android:background="@drawable/custom_button"
        android:text="@string/btnBack"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.049" />

</androidx.constraintlayout.widget.ConstraintLayout>